--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,28 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
+  --color-secondary-shadow: rgba(39, 174, 96, 0.3);
   --br-sm-2: 14px;
   --transition-properties: all 0.4s ease-in-out;
   --box-shadow-1: 0px 3px 15px rgba(0, 0, 0, 0.3);
+}
+
+
+.light-mode {
+  /* --color-primary: #fff; */
+  --color-primary: #fafafa;
+  --color-secondary: rgb(87, 183, 251);
+  /* --color-secondary: rgba(3, 150, 255, 0.7); */
+  --color-white: #454e56;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #efefef;
+  --color-grey-6: #12181b;
+  --color-secondary-shadow: rgba(3, 150, 255, 0.3);
 }
 
 body {
@@ -121,6 +140,31 @@ section {
   justify-content: center;
   transform: translateY(-50%);
 }
+/* theme btn start */
+.theme-btn {
+  top: 4%;
+  right: 3%;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: var(--color-grey-4);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.1s ease-in-out;
+}
+.theme-btn:active {
+  transform: translateY(-3px);
+}
+.theme-btn i {
+  font-size: 1.4rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
+}
+/* theme btn end */
 .controls .control {
   padding: 1rem;
   cursor: pointer;
@@ -223,6 +267,7 @@ section {
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
+  color: var(--color-grey-1);
 }
 .about-title h2 span {
   color: var(--color-secondary);
@@ -290,6 +335,7 @@ section {
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
+  color: var(--color-grey-1);
 }
 .title-portfolio h2 span {
   color: var(--color-secondary);
@@ -308,12 +354,14 @@ section {
   border-radius: 5px;
   transition: all 0.4s ease-in-out;
   box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+  color: var(--color-grey-1);
 }
 .projects-container .project:hover {
   cursor: default;
   transform: translateY(-5px);
   border: 1px solid var(--color-secondary);
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+  /* box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32); */
+  box-shadow: 1px 4px 15px var(--color-secondary-shadow);
 }
 .projects-container .project img {
   height: 9rem;
@@ -330,6 +378,7 @@ section {
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
+  color: var(--color-grey-1);
 }
 .title-blogs h2 span {
   color: var(--color-secondary);
@@ -355,7 +404,7 @@ section {
   cursor: default;
   transform: translateY(-5px);
   border: 1px solid var(--color-secondary);
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+  box-shadow: 1px 4px 15px var(--color-secondary-shadow);
 }
 .blogs-container .blog img {
   height: 9rem;
@@ -372,6 +421,7 @@ section {
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
+  color: var(--color-grey-1);
 }
 .contact .title-contact span {
   color: var(--color-secondary);
@@ -388,12 +438,13 @@ section {
   padding: 0.5rem 1rem;
   transition: var(--transition-properties);
   border-radius: 6px;
+  color: var(--color-grey-1);
 }
 .personal-info .contact-item:hover {
   color: var(--color-white);
   transform: translateY(-5px);
   cursor: default;
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+  box-shadow: 1px 4px 15px var(--color-secondary-shadow);
 }
 .personal-info .contact-item > *:last-child{
   margin-left: auto;
@@ -411,6 +462,7 @@ section {
 .social-items span {
   margin: 0.6rem;
   position: relative;
+  color: var(--color-grey-1);
 }
 .social-items span a {
   display: flex;
@@ -422,7 +474,7 @@ section {
   transition: var(--transition-properties);
 }
 .social-items .fab {
-  color: var(--color-grey-0);
+  color: var(--color-grey-3);
   cursor: pointer;
   border-radius: 50%;
   transition: all .4s ease-in-out;
@@ -433,16 +485,18 @@ section {
 .social-items .hashnode .square {
   height: 1.95rem;
   width: 1.95rem;
-  background-color: var(--color-grey-0);
+  background-color: var(--color-grey-3);
   border-radius: 9px;
   transform: rotate(45deg);
   transition: var(--transition-properties);
   margin: 5px;
+  -webkit-mask: radial-gradient(#0000 28%, #000 28%);
+  mask: radial-gradient(#0000 28%, #000 28%);
 }
 .social-items .hashnode .square:hover {
   background-color: var(--color-secondary);
 }
-.social-items .hashnode .square .circle {
+/* .social-items .hashnode .square .circle {
   height: 0.9rem;
   width: 0.9rem;
   border-radius: 50%;
@@ -451,8 +505,94 @@ section {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--color-primary);
-} 
+}  */
+
+/* Frontend Mentor logo */
+.frontendMentor .circle {
+  width: 3rem;
+  height: 3rem;
+  border: 0.3rem solid  var(--color-grey-3);
+  border-color: transparent transparent  var(--color-grey-3) transparent;
+  transform: rotate(42deg) scale(0.55);
+  border-radius: 50%;
+  position: relative;
+  top: 0.3rem;
+  padding: 0;
+  margin: 0;
+  transition: var(--transition-properties);
+}
+.frontendMentor .dot1 {
+  width: 0.3rem;
+  height: 0.3rem;
+  transition: var(--transition-properties);
+  background-color:  var(--color-grey-3);
+  border-radius: 50%;
+  position: relative;
+  top: 2rem;
+  left: 0.09rem;
+}
+
+.frontendMentor .dot2 {
+  width: 0.3rem;
+  height: 0.3rem;
+  transition: var(--transition-properties);
+  background-color:  var(--color-grey-3);
+  border-radius: 50%;
+  position: relative;
+  top: 1.69rem;
+  left: 2rem;
+}
+.frontendMentor .line {
+  height: 2.2rem;
+  width: 0.3rem;
+  border-radius: 0.6rem;
+  background-color:  var(--color-grey-3);
+  position: relative;
+  top: -0.9rem;
+  left: 0.4rem;
+  transform: rotate(-42deg);
+  transition: var(--transition-properties);
+}
+
+.frontendMentor .arrow {
+  position: relative;
+  top: -1.1rem;
+  left: 0.01rem;
+}
+/* bottom part */
+.frontendMentor .arrow1 {
+  height: 0.3rem;
+  width: 1.4rem;
+  border-radius: 10px;
+  background-color:  var(--color-grey-3);
+  position: relative;
+  top: -1.7rem;
+  left: 1.5rem;
+  transform: rotate(-20deg);
+  transition: var(--transition-properties);
+}
+/* top part */
+.frontendMentor .arrow2 {
+  height: 0.3rem;
+  width: 1.4rem;
+  border-radius: 10px;
+  background-color:  var(--color-grey-3);
+  position: relative;
+  top: -2.35rem;
+  left: 1.2rem;
+  transform: rotate(-65deg);
+  transition: var(--transition-properties);
+}
+.frontendMentor p {
+  position: relative;
+  top: -0.2rem;
+}
+.frontendMentor:hover {
+  --color-grey-3: var(--color-secondary);
+}
+
 /* contact end */
+
 
 /* resume download button start */
 .btn-container {
@@ -485,7 +625,9 @@ section {
 .main-btn:hover {
   background-color: var(--color-secondary);
   transition: var(--transition-properties);
+  color: var(--color-grey-0);
 }
+
 /* resume download button end */
 
 /* BACKGROUND TEXT start*/
