--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
   --br-sm-2: 14px;
   --transition-properties: all 0.4s ease-in-out;
   --box-shadow-1: 0px 3px 15px rgba(0, 0, 0, 0.3);
+  --color-theme-btn: #fafafa;
 }
 
 
@@ -31,7 +32,7 @@
   /* --color-secondary: rgba(3, 150, 255, 0.7); */
   --color-white: #454e56;
   --color-black: #000;
-  --color-grey0: #f8f8f8;
+  --color-grey-0: #f8f8f8;
   --color-grey-1: #6c7983;
   --color-grey-2: #6c7983;
   --color-grey-3: #6c7983;
@@ -39,6 +40,7 @@
   --color-grey-5: #efefef;
   --color-grey-6: #12181b;
   --color-secondary-shadow: rgba(3, 150, 255, 0.3);
+  --color-theme-btn: #191d2b;
 }
 
 body {
@@ -144,8 +146,8 @@ section {
 .theme-btn {
   top: 4%;
   right: 3%;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background-color: var(--color-grey-4);
   cursor: pointer;
@@ -160,26 +162,37 @@ section {
   transform: translateY(-3px);
 }
 .theme-btn i {
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   color: var(--color-grey-2);
   pointer-events: none;
+}
+.theme-btn:hover i{
+  color: var(--color-theme-btn);
 }
 /* theme btn end */
 .controls .control {
   padding: 1rem;
   cursor: pointer;
   background-color: var(--color-grey-4);
-  width: 55px;
-  height: 55px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0.7rem 0;
+  flex-direction: column;
+  margin: 1rem 0;
   box-shadow: var(--box-shadow-1);
+  position: relative;
+}
+.controls .control p {
+  position: absolute;
+  top: 2.4rem;
+  font-size: 0.7rem;
+  display: none;
 }
 .controls .control i {
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   color: var(--color-grey-2);
   pointer-events: none;
 }
@@ -189,6 +202,13 @@ section {
 }
 .controls .active-btn i {
   color: var(--color-white);
+}
+.controls .control:hover p {
+  display: block;
+  color: var(--color-white);
+}
+.controls .control:hover i {
+  color: var(--color-grey-0);
 }
 /* control end */
 
@@ -439,6 +459,7 @@ section {
   transition: var(--transition-properties);
   border-radius: 6px;
   color: var(--color-grey-1);
+  width: 100%;
 }
 .personal-info .contact-item:hover {
   color: var(--color-white);
