--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@
 }
 
 :root {
-  --color-primary: #191d2b;
-  --color-secondary: #27ae60;
+  /* --color-primary: #191d2b; */
+  --color-primary: #30475e;
+  --color-secondary: rgb(39, 174, 96);
   --color-white: #ffffff;
   --color-black: #000000;
   --color-grey-0: #f8f8f8;
@@ -16,6 +17,7 @@
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
+  --color-grey-5: #17314b;
   --color-grey-6: #12181b;
   --color-secondary-shadow: rgba(39, 174, 96, 0.3);
   --br-sm-2: 14px;
@@ -27,9 +29,8 @@
 
 .light-mode {
   /* --color-primary: #fff; */
-  --color-primary: #fafafa;
+  --color-primary: #f5f5fa;
   --color-secondary: rgb(87, 183, 251);
-  /* --color-secondary: rgba(3, 150, 255, 0.7); */
   --color-white: #454e56;
   --color-black: #000;
   --color-grey-0: #f8f8f8;
@@ -37,7 +38,7 @@
   --color-grey-2: #6c7983;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
-  --color-grey-5: #efefef;
+  --color-grey-5: #e1e1e1;
   --color-grey-6: #12181b;
   --color-secondary-shadow: rgba(3, 150, 255, 0.3);
   --color-theme-btn: #191d2b;
@@ -813,4 +814,3 @@ section {
     flex-wrap: wrap;
   }
 }
-/*# sourceMappingURL=styles.css.map */
