--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   list-style: none;
 }
 
+html {
+  user-select: none;
+}
+
 :root {
   /* --color-primary: #191d2b; */
   --color-primary: #30475e;
@@ -376,6 +380,8 @@ section {
   transition: all 0.4s ease-in-out;
   box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
   color: var(--color-grey-1);
+  position: relative;
+  overflow: hidden;
 }
 .projects-container .project:hover {
   cursor: default;
@@ -383,6 +389,22 @@ section {
   border: 1px solid var(--color-secondary);
   /* box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32); */
   box-shadow: 1px 4px 15px var(--color-secondary-shadow);
+}
+.projects-container .project .masking {
+  z-index: 20;
+  background-color: var(--color-grey-5);
+  padding: 2rem;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  max-height: 100%;
+  overflow-y: auto;
+  transform: translateY(100%);
+  transition: transform 0.6s ease-in;
+}
+.projects-container .project:hover .masking {
+  transform: translateY(0);
 }
 .projects-container .project img {
   height: 9rem;
