--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,8 @@ section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: space-evenly;
+  /* align-items: space-evenly; */
+  align-items: center;
 }
 .about-container .right-about .icons span {
   display: flex;
@@ -339,20 +340,42 @@ section {
   color: var(--color-secondary);
   font-size: 2rem;
 }
+/* nextjs icon start */
+.about-container .right-about .icons .icon-nextjs svg {
+  height: 0.6rem;
+  margin-top: 22px;
+}
+/* react js */
+.about-container .right-about .icons .icon-react i {
+  color: #61DBFB; 
+}
+
 /* tailwind icon start */
 .about-container .right-about .icons .icon-tailwind svg {
   height: 2rem;
 }
 .about-container .right-about .icons .icon-tailwind path {
-  fill: var(--color-secondary); 
+  fill: #38bdf8; 
 }
 /* tailwind icon end */
+/* html5 */
+.about-container .right-about .icons .icon-html5 i {
+  color: #e34c26;
+}
+/* css3 */
+.about-container .right-about .icons .icon-css3 i {
+  color: #264DE4;
+} 
+/* js */
+.about-container .right-about .icons .icon-js i {
+  color: #F0DB4F;
+} 
 /* git icon start */
 .about-container .right-about .icons .icon-git svg {
   height: 2rem;
 }
 .about-container .right-about .icons .icon-git path {
-  fill: var(--color-secondary);
+  fill: #f03c2e;
 }
 /* git icon end */
 /* django icon start */
@@ -367,6 +390,14 @@ section {
   fill: var(--color-primary);
 }
 /* django icon end */
+/* mysql icon start */
+.about-container .right-about .icons .icon-mysql svg {
+  height: 2rem;
+}
+.about-container .right-about .icons .icon-mysql path {
+  fill: var(--color-secondary);
+}
+/* mysql icon end */
 .about-container .left-about {
   flex: 1;
   margin-right: 2rem;
